# prediction-market-support

./: .gitignore  .gitmodules  A  Dockerfile  README.md  action', 'source': 'tz1azKk3gBJRjW11JAh8J1CBP1tF2NUu5yJ3', 'fee': '6415', 'counter': '812', 'gas_limit': '61099', 'storage_limit': '100', 'amount': '0',  action, caller2, market, market_id, error_func=raise_error, logging=False)  alice.json  ask.sh  bash-ini-parser.sh  bid.sh  bob.json  bugs_to_correct  cache.py  caleb.json  cli  cli.ini  cli.py  compile-ask-parameter.sh  data.json  demo.py  docker-compose.yml  donald.json  error_messages  gen-cache.sh  harbinger.mligo  initial-storage.sh  list_errors  logs.txt  lolo.json  notes  oracle.ini  oracle.py  originate.sh  pascal.json  pyproject.toml  pytezos1  pytezos2  q  receive.py  (+24 more)
.tezos-client/: secret_keys
compiled_contracts/: main.mligo
docker/: default.conf  gen-cache.sh  nginx-mime.types
prof/: combined.prof  test_add_liquidity_in_auction_phase.prof  test_add_liquidity_inexistent_market.prof  test_add_liquidity_insufficient_currency_balance.prof  test_add_liquidity_on_cleared.prof  test_add_liquidity_resolved_market.prof  test_auction_bet_existing_address_correct_bet.prof  test_auction_bet_insufficient_currency_balance.prof  test_auction_bet_market_already_cleared.prof  test_auction_bet_new_address_correct_bet.prof  test_auction_bet_non_existent_market_id.prof  test_auction_incorrect_bet[0-17179869184].prof  test_auction_incorrect_bet[1000-36893488147419103232].prof  test_burn_inexistent_market.prof  test_burn_insufficient_currency_balance.prof  test_burn_resolved_market.prof  test_burn_token_in_auction_phase.prof  test_burn_token_on_cleared.prof  test_claim_winning_lqt_provider[False].prof  test_claim_winning_lqt_provider[True].prof  test_claim_winnings_unresolved_market.prof  test_clear_market_in_auction_phase.prof  test_clear_market_insufficient_liquidity_from_bets[1-100].prof  test_clear_market_insufficient_liquidity_from_bets[1-2].prof  test_clear_market_on_cleared.prof  test_clear_market_with_no_bet_market.prof  test_clear_non_existent_market_id.prof  test_create_market_already_used_market_id.prof  test_create_market_correct_bet_success_fa12.prof  test_create_market_incorrect_bet[0-17179869184].prof  test_create_market_incorrect_bet[1000-36893488147419103232].prof  test_create_market_non_existent_currency.prof  test_mint_inexistent_market.prof  test_mint_insufficient_currency_balance.prof  (+28 more)
sandbox/: Dockerfile  (+4 more)
(+99 files in other folders)
