[tool.poetry]
name = "prediction-market-support"
version = "0.1.0"
description = ""
authors = ["multi prise <korokoko.toi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
configparse = "^0.1.5"
pysodium = {git = "https://github.com/stef/pysodium.git", rev = "0.7.5"}
pytezos = "^2.5.15"
dateparser = "^1.0.0"
pytz = "^2021.1"
jq = "^1.1.2"
ipfshttpclient = "0.7.0a1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
