[tool.poetry]
name = "prediction-market-support"
version = "0.1.0"
description = ""
authors = ["multi prise <korokoko.toi@gmail.com>"]

[tool.poetry.scripts]
support = "cli.cli:support_cli"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
configparse = "^0.1.5"
pysodium = {git = "https://github.com/stef/pysodium.git", rev = "0.7.7"}
pytezos = "^3.0.1"
dateparser = "^1.0.0"
pytz = "^2021.1"
jq = "^1.1.2"
typer = "^0.3.2"
wolframalpha = "^4.1.1"
ipfshttpclient = {git = "https://github.com/ipfs-shipyard/py-ipfs-http-client", rev = "bcec97a"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"
pytest = "^6.2.2"
pytest-regtest = "^1.4.5"
pytest-timeout = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
