[tool.poetry]
name = "prediction-market-support"
version = "0.1.0"
description = ""
authors = ["multi prise <korokoko.toi@gmail.com>"]

[tool.poetry.scripts]
support = "src.cli.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
configparse = "^0.1.5"
pysodium = {git = "https://github.com/stef/pysodium.git", rev = "0.7.7"}
pytezos = "^3.2.1"
dateparser = "^1.0.0"
pytz = "^2021.1"
jq = "^1.1.2"
typer = "^0.3.2"
wolframalpha = "^4.1.1"
ipfshttpclient = "0.8.0a1"
pytest = "^6.2.4"
loguru = "^0.5.3"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.2.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"
pytest = "^6.2.2"
pytest-regtest = "^1.4.5"
pytest-timeout = "^1.4.2"
pytest-lazy-fixture = "^0.6.3"
zmq = "^0.0.0"
pytest-mock = "^3.5.1"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
